2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* tests/Makefile.am:
	* tests/icles/.cvsignore:
	* tests/icles/Makefile.am:
	* tests/icles/stress-xoverlay.c: (myclock), (open_display),
	(close_display), (resize_window), (move_window), (create_window),
	(terminate_playback), (pause_playback), (start_playback), (main):
	  add stress test for xoverlay from Julien

2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* docs/libs/tmpl/gstcolorbalance.sgml:
	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	* gst-libs/gst/rtp/gstbasertppayload.c:
	* gst-libs/gst/rtp/gstrtpbuffer.c:
	* gst-libs/gst/rtp/gstrtpbuffer.h:
	  Do burger's rename for rtp payloaders and depayloaders

2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* win32/:
	  add Visual Studio 6 build files

2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/libs/gst-plugins-base-libs-docs.sgml:
	* docs/libs/gst-plugins-base-libs-sections.txt:
	* docs/libs/tmpl/gstaudio.sgml:
	* docs/libs/tmpl/gstringbuffer.sgml:
	* gst-libs/gst/interfaces/xoverlay.c:
	* gst-libs/gst/video/gstvideofilter.c:
	* gst-libs/gst/video/gstvideosink.c:
	  update documentation

2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/tcp/gstmultifdsink.c: (gst_multi_fd_sink_base_init),
	(gst_multi_fd_sink_class_init), (gst_multi_fd_sink_init),
	(gst_multi_fd_sink_finalize), (gst_multi_fd_sink_add),
	(gst_multi_fd_sink_remove), (gst_multi_fd_sink_clear),
	(gst_multi_fd_sink_get_stats),
	(gst_multi_fd_sink_remove_client_link),
	(gst_multi_fd_sink_handle_client_read),
	(gst_multi_fd_sink_client_queue_data),
	(gst_multi_fd_sink_client_queue_caps),
	(gst_multi_fd_sink_client_queue_buffer),
	(gst_multi_fd_sink_new_client),
	(gst_multi_fd_sink_handle_client_write),
	(gst_multi_fd_sink_recover_client),
	(gst_multi_fd_sink_queue_buffer),
	(gst_multi_fd_sink_handle_clients), (gst_multi_fd_sink_thread),