@@ -1,3 +1,9 @@
+2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>
+
+	* configure.ac:
+	* ext/Makefile.am:
+	  moved pango to base
+
 2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac:
